--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     </head>
 
   <body>
+     Hello there, awesome person!  
       <h1>I'm a header 1!</h1>
-      Hello there, awesome person! 
+      <img src="https://avatars0.githubusercontent.com/u/56095309?v=4">
+      
   </body>
 
 </html>
