--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 
   <body>
      Hello there, awesome person!  
-      <h1>I'm a header 1!</h1>
+<img src="https://avatars0.githubusercontent.com/u/56095309?v=4">
+
       <img src="https://avatars0.githubusercontent.com/u/56095309?v=4">
       
   </body>
