--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
 
       <img src="https://avatars0.githubusercontent.com/u/56095309?v=4">
       
+      <ol>
+    <li>Google</li>
+    <li>Facebook/li>
+    <li>Zillow</li>
+</ol>
+      
   </body>
 
 </html>
