--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       <ol>
     <li>Google</li>
     <li>Facebook/li>
-    <li>Zillow</li>
+      <li>My favorite site is <a href="https://github.com">GitHub</a>!</li>
 </ol>
       
   </body>
